<resources>

    <string name="app_name">FxConverter</string>
    <string name="label_retry">Retry</string>

    <string name="label_version">Version</string>


    <string name="ayia_email">getmeayia@gmail.com</string>

    <string name="ayia_instagram">https://instagram.com/ayiaware?</string>
    <string name="ayia_github">https://github.com/ayiaware?</string>
    <string name="ayia_twitter">https://twitter.com/ayiaware?</string>


    <string name="msg_network_error">Network Error</string>
    <string name="msg_not_internet">No internet connection</string>
    <string name="msg_unexpected_error">Unexpected error</string>

    <string name="msg_data_empty">Data not found</string>


    <string name="label_last_updated">Last updated</string>
    <string name="label_next_update">Next update</string>


    <string name="menu_settings">Settings</string>

    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="label_share">Share</string>
    <string name="label_convert">Convert</string>


    <!--Mostly used in settings START-->

    <string name="label_dark_mode">Dark mode</string>
    <string name="label_light_mode">Light mode</string>
    <string name="label_follow_system">Follow system</string>

    <string name="label_theme">Theme</string>

    <string name="label_select_theme">Select theme</string>

    <string name="label_clear_data">Clear cache</string>
    <string name="msg_clear_data">Clear all cached data in the app to free up space</string>
    <string name="label_amount">Amount</string>
    <string name="label_convert_currency">Convert currency</string>
    <string name="label_search">Search</string>
    <string name="label_to_currency">To currency</string>
    <string name="label_contact_developer">Contact developer</string>

    <string name="label_symbol">Symbol</string>
    <string name="label_code">Code</string>
    <string name="label_rate">Rate</string>
    <string name="label_from_currency">From currency</string>

    <string name="label_ok">OK</string>

    <string name="error_same_currency">Selected currencies cannot be the same</string>
    <string name="error_amount">Invalid amount</string>
    <string name="label_settings">Settings</string>
    <string name="label_about">About</string>
    <string name="msg_rate_app">Rate this app on Google Play Store</string>
    <string name="label_rate_app">Rate App</string>
    <string name="msg_about">App version, developer contact</string>


    <!--Mostly used in settings END-->

</resources>