<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="vm"
            type="com.ayia.fxconverter.presentation.main.MainViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.main.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:elevation="0dp"
            android:theme="@style/Theme.FxConverter.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|snap"

                app:titleEnabled="false"
                app:toolbarId="@id/toolbar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="8dp"
                    >

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/colorPrimary"
                        app:title=" "
                        app:popupTheme="@style/Theme.FxConverter.PopupOverlay">

                        <TextView
                            android:id="@+id/toolbar_title"
                            style="@style/TextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxEms="15"
                            android:textSize="24sp"
                            android:textColor="@color/white"
                            android:text="@string/app_name" />

                    </androidx.appcompat.widget.Toolbar>


                </LinearLayout>


            </com.google.android.material.appbar.CollapsingToolbarLayout>


        </com.google.android.material.appbar.AppBarLayout>


        <include
            android:id="@+id/content_main"
            layout="@layout/content_main" />


        <TextView
            android:id="@+id/tvLastUpdatedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/label_last_updated"
            android:text="@{vm.infoObs == null ? `` : @string/label_last_updated +` `+vm.infoObs.updatedStr()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_gravity="bottom|center"
            android:padding="4dp"
            android:layout_marginHorizontal="4dp"
            android:textSize="12sp" />






        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="32dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/label_convert"
            android:contentDescription="@string/fab_content_description"
            app:icon="@drawable/ic_convert" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>