<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.ayia.fxconverter.presentation.rate.RateViewModel" />


    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="0dp"
        tools:context=".presentation.rate.RateFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_dashboard_rate"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/rule"
                android:layout_width="70dp"
                android:layout_height="3dip"
                android:layout_margin="8dp"
                android:background="@color/white"
                android:elevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                android:scaleType="center"
                android:translationZ="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rule"
                app:setFlagImage150="@{vm.rate.flagUrl}" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp"
            app:layout_constraintTop_toBottomOf="@id/header">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:text="@{vm.currency.getDisplayName()}"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Nigerian Naira" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rate"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@{String.valueOf(vm.rate.amount)+` `+vm.baseCurrency.getSymbol()}"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name"
                tools:text="0.87687 $" />

            <TextView
                android:id="@+id/rateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_rate"
                app:layout_constraintEnd_toEndOf="@id/rate"
                app:layout_constraintStart_toStartOf="@id/rate"
                app:layout_constraintTop_toBottomOf="@id/rate"
                tools:text="Rate in dollar" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weight"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@{vm.rate.code}"
                android:textSize="21sp"
                app:layout_constraintEnd_toStartOf="@id/symbol"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rateLabel"
                tools:text="NGN" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/codeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_code"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/weight"
                app:layout_constraintStart_toStartOf="@id/weight"
                app:layout_constraintTop_toBottomOf="@id/weight"
                tools:text="code" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/symbol"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@{vm.currency.getSymbol()}"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/weight"
                app:layout_constraintTop_toBottomOf="@id/rateLabel"
                tools:text="N" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/symbolLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_symbol"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/symbol"
                app:layout_constraintStart_toStartOf="@id/symbol"
                app:layout_constraintTop_toBottomOf="@id/symbol"
                tools:text="symbol" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lastUpdated"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@{vm.info.updatedStr()}"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/codeLabel"
                tools:text="Wed 12th 2022" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lastUpdatedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_last_updated"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/lastUpdated"
                app:layout_constraintStart_toStartOf="@id/lastUpdated"
                app:layout_constraintTop_toBottomOf="@id/lastUpdated" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nextUpdate"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@{vm.info.nextUpdateStr()}"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lastUpdatedLabel"
                tools:text="Wed 12th 2022" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nextUpdateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_next_update"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/nextUpdate"
                app:layout_constraintStart_toStartOf="@id/nextUpdate"
                app:layout_constraintTop_toBottomOf="@id/nextUpdate" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>