<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="listener"
            type="android.view.View.OnClickListener" />

        <import
            type="com.ayia.fxconverter.BuildConfig"/>

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:context=".core.presentation.MainActivity"
        >

        <View
            style="@style/BottomSheetCloseIndicator"
            />

        <TextView
            style="@style/BottomSheetTitleTextStyle"
            android:text="@string/label_about"
            android:visibility="gone"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:srcCompat="@mipmap/ic_launcher_round"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                android:background="?selectableItemBackground"
                android:onClick="@{listener::onClick}"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:textSize="18sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{@string/label_version + ` ` +BuildConfig.VERSION_NAME}"
                android:gravity="center_horizontal"
                android:layout_marginTop="4dp"
                tools:text="Version 1.09"
                />

        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_contact_developer"
            android:textSize="12sp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            >

            <ImageView
                android:id="@+id/ivSocial1"
                style="@style/SocialsIconStyle"
                android:onClick="@{listener}"
                app:srcCompat="@drawable/ic_email_24" />


            <ImageView
                android:id="@+id/ivSocial2"
                style="@style/SocialsIconStyle"
                android:onClick="@{listener}"
                app:srcCompat="@drawable/instagram" />


            <ImageView
                android:id="@+id/ivSocial3"
                style="@style/SocialsIconStyle"
                android:onClick="@{listener}"
                app:srcCompat="@drawable/twitter" />


            <ImageView
                android:id="@+id/ivSocial4"
                style="@style/SocialsIconStyle"
                android:onClick="@{listener}"
                app:srcCompat="@drawable/github" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_marginTop="32dp">

            <TextView
                android:id="@+id/tvPrivacy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{listener::onClick}"
                android:textStyle="italic"
                android:background="?selectableItemBackground"
                android:text="Privacy Policy" />


            <TextView
                android:id="@+id/tvTerms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{listener::onClick}"
                android:textStyle="italic"
                android:background="?selectableItemBackground"
                android:text="Terms and Conditions" />



        </LinearLayout>



    </LinearLayout>





</layout>